<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="32dp"
    android:layout_weight="1"
    android:gravity="center_vertical"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/desc_user_avatar"/>

    <TextView
        android:id="@+id/user_display_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/btn_reject"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_clear"
        tools:src="@drawable/ic_clear"
        android:contentDescription="@string/desc_reject_invitation"/>

    <ImageButton
        android:id="@+id/btn_accept"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_check"
        tools:src="@drawable/ic_check"
        android:contentDescription="@string/desc_accept_invitation"/>

</LinearLayout>